--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>PORTFOLIO WEBSITE</title>
+<title> Portfolio>
+</title>
 </head>
-<body>
 
-<h1>LAJO LAKSHMAN </h1>
-<break>
-<p><i> Dont think, just do.</i> </p>
-<break>
-<p> I'm trying to live by this motto.</p>
-<break> 
-<p> Welcome to my portfolio.</p> <p>  I am a 4th sem design student trying to find my way 
-in the design industry!</p> <p>I dabble in graphic design, photography, film making, 
-Animation and sound!</p>
-<p>contact me at lashi.lakshman@gmail.com </p>
-</body>
-</html>
+<body style="background-color:DodgerBlue;">
+<h1 style="background-color:rgb(240, 240, 240);"><div align="center"> My name is Lajo Lakshman </h1> </div>
+<h2 style="border:2px , rgb(255, 36, 148);"><div align="center"> I study in PES University, pursuing Bachelors in Design. My branch is Communication Design </div> </h2> 
+ <div align="center"> <img src="download.jpg" height= 300 width=300> 
+ <break>
+ <a href="Link.html"> CLICK ME! </a>  </div>
+ </body>
+ </html>
